# findstr

./: CMakeLists.txt  LICENSE  Makefile  Makefile.linux  README.md  findstr.cpp  machmemory.cpp  machmemory.h
cmake_find/: Findcpputils.cmake  Findhexdumper.cmake
itsutils/csv/: findstr.cpp
